--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -48,6 +48,9 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('FAQ') }}">FAQ</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
                     </li>
                 </ul>
@@ -75,7 +78,7 @@
             <div class="col-md-6">
                 <div id='top'>
                     <img src="{{ url_for('static', filename='img/whitecalc.png') }}" class='img-fluid' alt="">
-                    <h2>CALCULATOR</h2>
+                    <h2>ERROR 404</h2>
                 </div>
             </div>
             <div class="col-md-2"></div>
