--- a/app/templates/FAQ.html
+++ b/app/templates/FAQ.html
@@ -80,7 +80,7 @@
             <div class="col-md-6">
                 <div id='top'>
                     <img src="{{ url_for('static', filename='img/whitecalc.png') }}" class='img-fluid' alt="">
-                    <h2>ABOUT PAGE</h2>
+                    <h2>FAQ</h2>
                 </div>
             </div>
             <div class="col-md-2"></div>
@@ -96,23 +96,8 @@
                         <div class="text-content">
                                 <div class="row">
                                     <div class="col-md-6 mb-2">
-                                        <h2 class="pt-3 text-center">About Us</h2>
-                                        <img src="{{ url_for('static', filename='img/resi.png') }}" id='circle' style="margin-left:auto; margin-right:auto; display:block" height="50%" width="80%" class='img-flud mb-3' alt="">
-                                        <p>Know how much power you have in your surrounding at different time
-                                                intervals in order to
-                                                plan for the safier, healthier and cost friendly future you and your family have always dreamt of.</p>
-                                    </div>
-                    
-                                    <div class="col-md-6">
-                                        <h2 class="pt-3 text-center">Contact Us</h2>
-                                        <form action="">
-                                            <input type="text" class='field' placeholder="Your Name" required>
-                                            <input type="email" class="field" placeholder="Email Address" required>
-                                            <input type="text" class="field" placeholder="Telephone Number" required>
-                                            <textarea name="" class="field area" id="" placeholder="Message"
-                                                required></textarea>
-                                            <button type="submit" class='btn'>Submit</button>
-                                        </form>
+                                        <h2 class="pt-3 text-center">FAQ</h2>
+                                        <p></p>
                                     </div>
                                 </div>
                             </div>
