--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,6 +45,9 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('FAQ') }}">FAQ</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
                     </li>
                 </ul>
