--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-md-6 mt-3">
                         <h1 class='mb-4' id="solar">Solar power <br> is the future</h1>
-                        <p class='mb-2 text-justify'>Know how much power you have in your surrounding at different time
+                        <p class='mb-2 d-flex justify-content-center'>Know how much power you have in your surrounding at different time
                             intervals in order to
                             plan for the safier, healthier and cost friendly future you and your family have always dreamt of.
                         </p>
