--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -160,5 +160,32 @@ footer {
 
     img#side{
         display: block;
+        height: 225px;
+        position: relative;
+        top: -24em;
+
+        
+    }
+    .mbp{
+        position: relative;
+        top: 17em;
+    }
+    .tcer{
+        text-align: center;
+        padding: 0 30px;
+    }
+    a.btn.mt-3.mb-5.shadow-lg.clabtn {
+        position: relative;
+        height: 45px;
+        left: 37%;
+    }
+    p {
+        margin-top: 0;
+        margin-bottom: 1rem;
+        text-align: center;
+        line-height: 28px;
+    }
+    .col-md-8.txtcol {
+        margin-top: 70px;
     }
 }
