--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -71,9 +71,9 @@
 
         <div class="container mt-4">
                 <div class="row">
-                    <div class="col-md-6 mt-3">
+                    <div class="col-md-6 mt-3 mbp">
                         <h1 class='mb-4' id="solar">Solar power <br> is the future</h1>
-                        <p class='mb-2 d-flex justify-content-center'>Know how much power you have in your surrounding at different time
+                        <p class='mb-2 d-flex justify-content-center tcer'>Know how much power you have in your surrounding at different time
                             intervals in order to
                             plan for the safier, healthier and cost friendly future you and your family have always dreamt of.
                         </p>
@@ -89,7 +89,7 @@
         
                 <div class="row">
                     <div class="col-md-2"></div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 txtcol">
                         <img src="{{ url_for('static', filename='img/solar-house.svg') }}" id='solar' alt="">
                         <h3 class='text-center' style="color:#134373">Are you looking to get a solar panel?</h3>
                         <p>Generators can break, fossil fuels can run out, and
