--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -190,7 +190,8 @@
                                 {% endfor %}
                             </table>
                             <div class='mt-5'>
-                                Your total ouput: {{ output }}Watts-Hours/day
+                                Your total ouput: {{ output }}Watts-Hours/day<br>
+                                Click <a href="{{ url_for('get_result') }}">here</a> to get your result
                             </div>
 
                             </table>
